# website

./: .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.mjs  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.jest.json  tsconfig.json  vercel.json
.github/: copilot-instructions.md
.github/workflows/: node.js.yml  preview.yml
__tests__/: deadlock-counters.spec.ts  deadlock-parry.spec.ts  fusion-calculator.spec.ts  music-sequencer-util.spec.ts  utf8.spec.ts  wordle-art.spec.ts
app/: layout.tsx  page.css  page.tsx
app/about-me/: page.tsx
app/backlog/: page.tsx
app/beluga/: page.tsx
app/blog/: page.tsx  parser.tsx
app/deadlock-counters/: data.ts  page.tsx  util.ts
app/deadlock-parry/: cues.tsx  page.tsx  util.ts
app/drone-art/: page.tsx
app/fusion-calculator/: page.tsx  util.ts
app/game/: page.tsx
app/game-of-the-year/: GameDisplay.tsx  goty.json  page.tsx
app/gbstudio/: page.tsx
app/music-sequencer/: Sequencer.tsx  opengraph-image.tsx  page.tsx  util.ts
app/random-string/: page.tsx
app/rust-performance-eval/: page.tsx
app/string-length/: page.tsx
components/: Alert.tsx  Dashboard.tsx  Grid.tsx  InfoTooltip.tsx  MobileNavPanel.tsx  Navbar.tsx  SideNav.tsx  Sidebar.tsx  YoutubeEmbed.tsx
hooks/: useLocalStorage.ts  useQueryParams.ts  useWasm.ts
lib/: navigation.ts  posts.ts  utf8.ts  wasmLoader.ts
pages/: _app.tsx  index.tsx
posts/: content.md  test.mdx
scripts/: build-wasm.sh
types/: wasm.d.ts
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs  utils.rs
(+24 files in other folders)
