[package]
name = "website-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
]

[dependencies.getrandom]
version = "0.2"
features = ["js"]

# wee_alloc is a tiny allocator for wasm that is useful for keeping down the size of wasm binaries
[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true
